# message-vault-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
config/: blacklist.csv.example  config.toml  config.toml.example  contacts.csv  contacts.csv.example  exclude.csv  name-mapping.csv.example  obsidian-message-vault.css
crates/csv-ingest/: Cargo.toml  README.md
crates/csv-ingest/mappings/: go-sms-pro.toml  imazing.toml  imessage.toml  sms-backup-plus.toml  sms-backup-restore.toml
crates/csv-ingest/python/: README.md  exporter_csv.py  exporter_csv_to_vault.py  go_sms_pro_to_vault.py  imazing_to_vault.py  imessage_to_vault.py  sms_backup_plus_to_vault.py  sms_backup_restore_to_vault.py  vault_common.py
crates/csv-ingest/samples/converted/: _14075551234.json  imazing.json
crates/csv-ingest/samples/csv/: README.md  go-sms-pro.csv  imazing-group.csv  imazing.csv  imessage.csv  sms-backup-plus.csv  sms-backup-restore.csv
crates/csv-ingest/samples/vault/: 01-sms-text.json  02-sms-attachment.json  03-sms-subject.json  04-imessage-text.json  05-imessage-tapback.json  06-imessage-reply.json  07-imessage-announcement.json  08-group-conversation.json  README.md
crates/csv-ingest/src/: convert.rs  lib.rs  main.rs  mapping.rs  push.rs  sources.rs
crates/csv-ingest/tests/: convert_samples.rs
crates/demo-seed/: Cargo.toml
crates/demo-seed/src/: assets.rs  contacts.rs  conversations.rs  main.rs  personas.rs
crates/go-sms-pro-exporter/: Cargo.toml  README.md
crates/go-sms-pro-exporter-csv/: .gitignore  Cargo.toml  README.md
crates/go-sms-pro-exporter-csv/docs/: XML_CSV_MAPPING.md
crates/go-sms-pro-exporter-csv/src/: emit.rs  emoji.rs  lib.rs  main.rs  owner_set.rs  pdu.rs  xml.rs
crates/go-sms-pro-exporter/src/: emit.rs  lib.rs  main.rs  pdu.rs  phone.rs  xml.rs
crates/go-sms-pro-exporter/tests/fixtures/pdu/: I_1609459200_att.pdu  I_1609459200_group.pdu  I_1609459200_sent.pdu
crates/go-sms-pro-exporter/tests/fixtures/sample_export/: I_1609459200_recv.pdu
crates/imessage-database/: Cargo.toml  README.md
crates/imessage-exporter/: Cargo.toml  README.md
crates/imessage-exporter-csv/: Cargo.toml  README.md
crates/imessage-exporter-csv/samples/: 15551212.csv
crates/imessage-exporter-csv/src/: main.rs
crates/imessage-exporter-csv/src/app/: export_type.rs  options.rs  runtime.rs
crates/imessage-exporter-csv/src/exporters/: mod.rs
crates/imessage-exporter-csv/src/exporters/csv/: data.rs  mod.rs
crates/imessage-exporter-csv/src/exporters/shared/: balloon.rs
crates/imessage-exporter/src/: main.rs
crates/imessage-exporter/src/app/: export_type.rs  options.rs  runtime.rs
crates/imessage-exporter/src/app/compatibility/: error.rs
crates/imessage-exporter/src/exporters/: mod.rs
crates/imessage-exporter/src/exporters/html/: balloons.rs  mod.rs
crates/imessage-exporter/src/exporters/json/: data.rs  mod.rs
crates/imessage-exporter/src/exporters/shared/: attachment.rs  driver.rs  part.rs
crates/imessage-exporter/src/exporters/txt/: mod.rs
crates/message-json/: Cargo.toml  README.md
crates/message-json/docs/: CSV_INGEST.md
crates/message-json/src/: imessage.rs  lib.rs  sms.rs  vault.rs
crates/sms-backup-plus-exporter/: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/sms-backup-plus-exporter-csv/: Cargo.toml  README.md
crates/sms-backup-plus-exporter-csv/docs/: EML_CSV_MAPPING.md
crates/sms-backup-plus-exporter-csv/samples/: 14075551234.csv  15555550111.csv  15555550122.csv
crates/sms-backup-plus-exporter-csv/src/: archive.rs  assets.rs  contacts.rs  emit.rs  flat_eml.rs  identity.rs  lib.rs  main.rs  types.rs
crates/sms-backup-plus-exporter-csv/tests/: convert_smoke.rs
crates/sms-backup-plus-exporter-csv/tests/fixtures/: flat_smssync_276_sam.eml
crates/sms-backup-plus-exporter/.github/workflows/: ci.yml
crates/sms-backup-plus-exporter/config/: eml_contacts.example.csv  owner.example.toml
crates/sms-backup-plus-exporter/docs/: FORMAT.md
crates/sms-backup-plus-exporter/src/: archive.rs  contacts.rs  dedupe_eml.rs  emit.rs  flat_eml.rs  identity.rs  lib.rs  main.rs  phone.rs  types.rs  write_flat_eml.rs
crates/sms-backup-plus-exporter/tests/: convert_smoke.rs  dedupe_eml.rs
crates/sms-backup-plus-exporter/tests/fixtures/: archive.eml  flat_received.eml  flat_smssync_276_alex.eml
crates/sms-backup-restore-exporter/: .gitignore  Cargo.toml  README.md
crates/sms-backup-restore-exporter-csv/: Cargo.toml  README.md
crates/sms-backup-restore-exporter-csv/docs/: FIELDS.md  XML_CSV_MAPPING.md
crates/sms-backup-restore-exporter-csv/src/: assets.rs  emit.rs  lib.rs  main.rs  xml.rs
crates/sms-backup-restore-exporter-csv/tests/: convert_smoke.rs
crates/sms-backup-restore-exporter-csv/tests/fixtures/: sample.xml
crates/sms-backup-restore-exporter/docs/: FIELDS.md
crates/sms-backup-restore-exporter/src/: emit.rs  lib.rs  main.rs  owner_set.rs  phone.rs  smil.rs  xml.rs
crates/sms-backup-restore-exporter/tests/: convert_smoke.rs
demo/: README.md
demo/config/: config.toml  contacts.csv  exclude.csv
demo/staging/imessage/: email-contractor_at_demo.example.json  email-stranger_at_demo.example.json  empty-chat0000000001.json  empty-p18007438200.json  group-00.json  group-000.json  group-001.json  group-002.json  group-003.json  group-004.json  group-005.json  group-006.json  group-007.json  group-008.json  group-009.json  group-01.json  group-010.json  group-011.json  group-012.json  group-013.json  (+265 more)
docs/: dedupe.md  development.md  schema.md
message-exporter/: build-staging.sh  import-staging.sh
scripts/: build-staging.sh  import-staging.sh  ingest-staging.sh  setup-demo.sh  smoke-import-api.sh  smoke-vault-push.sh
src/: api_tokens.rs  assets.rs  config.rs  contacts.rs  dedupe.rs  exclude.rs  export_markdown.rs  import.rs  ingest.rs  main.rs  models.rs  ndjson.rs  phone.rs  reset_demo.rs  schema.rs  server.rs  vault_owner.rs  vcf.rs  vcf_to_contacts.rs
web/: README.md  STYLE_GUIDE.md  next.config.ts  package-lock.json  package.json
web/scripts/: process-assets.ts
web/src/: middleware.ts
(+223 files in other folders)
