[workspace]
resolver = "2"
members = ["."]

[workspace.dependencies]
message_json = { path = "crates/message-json" }

[package]
name = "message-vault-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
message_json = { path = "../message-json" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
toml = "1.1.2"
