[workspace]
resolver = "2"
members = [
    ".",
    "crates/demo-seed",
    "crates/message-json",
    "crates/csv-ingest",
]

[workspace.dependencies]
message_json = { path = "crates/message-json" }

[package]
name = "message-vault-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
csv-ingest = { path = "crates/csv-ingest" }
message_json = { workspace = true }
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3.27.0"
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread", "net", "signal"] }
toml = "1.1.2"
tower-http = { version = "0.7.0", features = ["limit"] }
