[package]
name = "csv-ingest"
version = "0.1.0"
edition = "2024"
description = "Convert per-conversation CSV (+ source mapping) to vault NDJSON"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
hex = "0.4.3"
message_json = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.23.0"
