[package]
name = "csv-ingest"
version = "0.1.0"
edition = "2024"
description = "Convert per-conversation CSV to vault NDJSON via Python converters"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"

[dev-dependencies]
message_json = { workspace = true }
serde_json = "1.0.150"
tempfile = "3.23.0"
