[package]
name = "csv-ingest"
version = "0.1.0"
edition = "2024"
description = "Convert per-conversation CSV to vault NDJSON via Python converters"

[[bin]]
name = "csv-ingest"
path = "src/main.rs"

[[bin]]
name = "vault-push"
path = "src/bin/vault_push.rs"

[[bin]]
name = "vault-push-gui"
path = "src/bin/vault_push_gui.rs"
required-features = ["gui"]

[features]
default = []
gui = ["dep:eframe", "dep:egui", "dep:rfd", "dep:dirs", "dep:open"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive", "env"] }
csv = "1.4.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
eframe = { version = "0.31", optional = true, default-features = true }
egui = { version = "0.31", optional = true }
rfd = { version = "0.15", optional = true }
dirs = { version = "6", optional = true }
open = { version = "5", optional = true }

[dev-dependencies]
message_json = { workspace = true }
serde_json = "1.0.150"
tempfile = "3.23.0"
