[package]
name = "demo-seed"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "demo-seed"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
message_json = { workspace = true }
rand = "0.9.2"
rand_chacha = "0.9.0"
serde_json = "1.0.150"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
