[package]
name = "go-sms-pro-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
message_json = { workspace = true }
quick-xml = { version = "0.41.0", features = ["serialize"] }
regex = "1.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
