[package]
authors = ["Christopher Sardegna <imessage@reagentx.net>"]
categories = ["command-line-utilities"]
description = "Export iMessage data to CSV (upstream imessage-exporter fork + csv format)"
edition = "2024"
exclude = [".github", "docs", "build.sh"]
license = "GPL-3.0-or-later"
name = "imessage-exporter-csv"
repository = "https://github.com/bitrealm-dev/message-vault-rs"
version = "0.0.0"

# Vendored from upstream ReagentX/imessage-exporter (imessage-exporter package only),
# with a CSV export overlay. No JSON exporter in this crate.
[[bin]]
name = "imessage-exporter-csv"
path = "src/main.rs"

[dependencies]
askama = "=0.16.0"
chrono = "=0.4.44"
clap = { version = "=4.6.1", features = ["cargo"] }
csv = "1.4.0"
fdlimit = "=0.3.0"
fs2 = "=0.4.3"
imessage-database = "4.2.0"
rpassword = "=7.5.3"
rusqlite = { version = "=0.40.0", features = ["blob", "bundled"] }
crabapple = { version = "=0.4.7" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
