[package]
name = "sms-backup-plus-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
mailparse = "0.16.1"
message_json = { workspace = true }
regex = "1.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"

[lints.rust]
unexpected_cfgs = "warn"

[lints.clippy]
correctness = "deny"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
