[package]
name = "sms-backup-restore-exporter-csv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
hex = "0.4.3"
html-escape = "0.2.14"
quick-xml = { version = "0.41.0", features = ["serialize"] }
regex = "1.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"

[dev-dependencies]
tempfile = "3.27.0"
